components/support/url-macro/tests/non_string_literal.stderr
error: expected string literal
 --> non_string_literal.rs:8:18
  |
8 |     let _ = url!(42);
  |                  ^^
